# rc

./: .travis.yml  Makefile.am  README.md  clean  configure.ac
scripts/: trip.rc
src/: addon.c  addon.h  builtins.c  builtins.h  common.h  convert.c  convert.h  except.c  except.h  exec.c  exec.h  execve.c  fn.c  fn.h  footobar.c  footobar.h  function.c  function.h  getgroups.h  getopt.c  getopt.h  glob.c  glob.h  glom.c  glom.h  hash.c  hash.h  heredoc.c  heredoc.h  history.c  input.c  input.h  jbwrap.h  lex.c  lex.h  list.c  list.h  main.c  match.c  match.h  (+42 more)
